--- a/ML/Pandas/Pandas_Intro.ipynb
+++ b/ML/Pandas/Pandas_Intro.ipynb
@@ -2701,7 +2701,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa4ef442e20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe91deb54c0>"
       ]
      },
      "execution_count": 71,
@@ -2733,7 +2733,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa4ed7995e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe91ca88bb0>"
       ]
      },
      "execution_count": 72,
@@ -2765,7 +2765,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa4ed77ad00>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe91ca206d0>"
       ]
      },
      "execution_count": 73,
@@ -2881,7 +2881,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fa4eec59bb0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fe91df53bb0>"
       ]
      },
      "execution_count": 79,
@@ -3003,7 +3003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3013,7 +3013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3022,7 +3022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -3147,7 +3147,7 @@
        "[1035 rows x 3 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3158,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3167,7 +3167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3262,7 +3262,7 @@
        "2019-05-07 06:00:00                  NaN  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3273,7 +3273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3282,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3291,7 +3291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3300,7 +3300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 94,
    "metadata": {
     "scrolled": true
    },
@@ -3467,7 +3467,7 @@
        "[1035 rows x 5 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3478,7 +3478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3494,7 +3494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3503,7 +3503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3514,7 +3514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -3679,7 +3679,7 @@
        "[1035 rows x 5 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3690,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -3855,7 +3855,7 @@
        "[1035 rows x 5 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3873,7 +3873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3882,11 +3882,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "# lets find mean of the age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age     29.471443\n",
+       "Fare    32.305420\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic[[\"Age\",\"Fare\"]].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you could also find max and min and you could also do this in a conjuction with other Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# you could also bundle these things who would have thought"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>80.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>median</th>\n",
+       "      <td>28.00</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Age  Fare\n",
+       "max     80.00   NaN\n",
+       "median  28.00   NaN\n",
+       "min      0.42   0.0"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.agg({\"Age\":['min','max','median'],\n",
+    "            \"Fare\":['min']})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and agg stands for aggregate #to aggrigate the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NOW AGGRIGATING STATISTICS GROUPED BY CATEGORY"
    ]
   },
   {
@@ -3896,8 +4028,55 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>annonymus</th>\n",
+       "      <td>28.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>27.692308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>30.446101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "29.471443066516347"
+       "                 Age\n",
+       "Sex                 \n",
+       "annonymus  28.666667\n",
+       "female     27.692308\n",
+       "male       30.446101"
       ]
      },
      "execution_count": 115,
@@ -3906,7 +4085,7 @@
     }
    ],
    "source": [
-    "titanic[\"Age\"].mean()"
+    "titanic[[\"Sex\",\"Age\"]].groupby(\"Sex\").mean()"
    ]
   },
   {
@@ -3915,7 +4094,281 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# you could also find max and min"
+    "# intresting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Siblings/Spouses Aboard</th>\n",
+       "      <th>Parents/Children Aboard</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>annonymus</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>28.666667</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>28.819433</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>0.740385</td>\n",
+       "      <td>2.160256</td>\n",
+       "      <td>27.692308</td>\n",
+       "      <td>0.695513</td>\n",
+       "      <td>0.653846</td>\n",
+       "      <td>44.511072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.190559</td>\n",
+       "      <td>2.384615</td>\n",
+       "      <td>30.446101</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>0.237762</td>\n",
+       "      <td>25.666075</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Survived    Pclass        Age  Siblings/Spouses Aboard  \\\n",
+       "Sex                                                                 \n",
+       "annonymus  0.666667  2.333333  28.666667                 0.666667   \n",
+       "female     0.740385  2.160256  27.692308                 0.695513   \n",
+       "male       0.190559  2.384615  30.446101                 0.431818   \n",
+       "\n",
+       "           Parents/Children Aboard       Fare  \n",
+       "Sex                                            \n",
+       "annonymus                 0.000000  28.819433  \n",
+       "female                    0.653846  44.511072  \n",
+       "male                      0.237762  25.666075  "
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.groupby(\"Sex\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now it dosesnt make sence to get an avg of Pclass what if you only want the average of the age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sex</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>annonymus</th>\n",
+       "      <td>28.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>27.692308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>30.446101</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Age\n",
+       "Sex                 \n",
+       "annonymus  28.666667\n",
+       "female     27.692308\n",
+       "male       30.446101"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic[[\"Age\",\"Sex\"]].groupby(\"Sex\").mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# But there is also an another way to so this "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex\n",
+       "annonymus    28.666667\n",
+       "female       27.692308\n",
+       "male         30.446101\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.groupby(\"Sex\")[\"Age\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex        Pclass\n",
+       "annonymus  1          71.283300\n",
+       "           3           7.587500\n",
+       "female     1         106.500448\n",
+       "           2          21.970121\n",
+       "           3          16.176109\n",
+       "male       1          67.226127\n",
+       "           2          19.741782\n",
+       "           3          12.711389\n",
+       "Name: Fare, dtype: float64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic.groupby([\"Sex\",\"Pclass\"])[\"Fare\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what if you wanna check the no of passengers in each class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sex        Pclass\n",
+       "male       3         342\n",
+       "female     3         143\n",
+       "male       1         122\n",
+       "           2         108\n",
+       "female     1          93\n",
+       "           2          76\n",
+       "annonymus  3           2\n",
+       "           1           1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "titanic[[\"Sex\",\"Pclass\"]].value_counts()"
    ]
   },
   {
@@ -3923,9 +4376,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
