--- a/ML/ML_Projects/Linear_Regression.ipynb
+++ b/ML/ML_Projects/Linear_Regression.ipynb
@@ -2,72 +2,336 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is the rediction of stock prices using Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import quandl\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quandl.ApiConfig.api_key='SVdgZ1xfdULzab4xWRZR'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=quandl.get('WIKI/AMZN')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-3-1510be955eb8>, line 46)",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Ex-Dividend</th>\n",
+       "      <th>Split Ratio</th>\n",
+       "      <th>Adj. Open</th>\n",
+       "      <th>Adj. High</th>\n",
+       "      <th>Adj. Low</th>\n",
+       "      <th>Adj. Close</th>\n",
+       "      <th>Adj. Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1997-05-16</th>\n",
+       "      <td>22.38</td>\n",
+       "      <td>23.75</td>\n",
+       "      <td>20.50</td>\n",
+       "      <td>20.75</td>\n",
+       "      <td>1225000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.865000</td>\n",
+       "      <td>1.979167</td>\n",
+       "      <td>1.708333</td>\n",
+       "      <td>1.729167</td>\n",
+       "      <td>14700000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-19</th>\n",
+       "      <td>20.50</td>\n",
+       "      <td>21.25</td>\n",
+       "      <td>19.50</td>\n",
+       "      <td>20.50</td>\n",
+       "      <td>508900.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.708333</td>\n",
+       "      <td>1.770833</td>\n",
+       "      <td>1.625000</td>\n",
+       "      <td>1.708333</td>\n",
+       "      <td>6106800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-20</th>\n",
+       "      <td>20.75</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>19.63</td>\n",
+       "      <td>455600.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.729167</td>\n",
+       "      <td>1.750000</td>\n",
+       "      <td>1.635833</td>\n",
+       "      <td>1.635833</td>\n",
+       "      <td>5467200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-21</th>\n",
+       "      <td>19.25</td>\n",
+       "      <td>19.75</td>\n",
+       "      <td>16.50</td>\n",
+       "      <td>17.13</td>\n",
+       "      <td>1571100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.604167</td>\n",
+       "      <td>1.645833</td>\n",
+       "      <td>1.375000</td>\n",
+       "      <td>1.427500</td>\n",
+       "      <td>18853200.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-22</th>\n",
+       "      <td>17.25</td>\n",
+       "      <td>17.38</td>\n",
+       "      <td>15.75</td>\n",
+       "      <td>16.75</td>\n",
+       "      <td>981400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.437500</td>\n",
+       "      <td>1.448333</td>\n",
+       "      <td>1.312500</td>\n",
+       "      <td>1.395833</td>\n",
+       "      <td>11776800.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Open   High    Low  Close     Volume  Ex-Dividend  Split Ratio  \\\n",
+       "Date                                                                          \n",
+       "1997-05-16  22.38  23.75  20.50  20.75  1225000.0          0.0          1.0   \n",
+       "1997-05-19  20.50  21.25  19.50  20.50   508900.0          0.0          1.0   \n",
+       "1997-05-20  20.75  21.00  19.63  19.63   455600.0          0.0          1.0   \n",
+       "1997-05-21  19.25  19.75  16.50  17.13  1571100.0          0.0          1.0   \n",
+       "1997-05-22  17.25  17.38  15.75  16.75   981400.0          0.0          1.0   \n",
+       "\n",
+       "            Adj. Open  Adj. High  Adj. Low  Adj. Close  Adj. Volume  \n",
+       "Date                                                                 \n",
+       "1997-05-16   1.865000   1.979167  1.708333    1.729167   14700000.0  \n",
+       "1997-05-19   1.708333   1.770833  1.625000    1.708333    6106800.0  \n",
+       "1997-05-20   1.729167   1.750000  1.635833    1.635833    5467200.0  \n",
+       "1997-05-21   1.604167   1.645833  1.375000    1.427500   18853200.0  \n",
+       "1997-05-22   1.437500   1.448333  1.312500    1.395833   11776800.0  "
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=df[['Adj. Close']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Adj. Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1997-05-16</th>\n",
+       "      <td>1.729167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-19</th>\n",
+       "      <td>1.708333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-20</th>\n",
+       "      <td>1.635833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-21</th>\n",
+       "      <td>1.427500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997-05-22</th>\n",
+       "      <td>1.395833</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Adj. Close\n",
+       "Date                  \n",
+       "1997-05-16    1.729167\n",
+       "1997-05-19    1.708333\n",
+       "1997-05-20    1.635833\n",
+       "1997-05-21    1.427500\n",
+       "1997-05-22    1.395833"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we got our Data yeah!!!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Adj.CLose'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-1510be955eb8>\"\u001b[0;36m, line \u001b[0;32m46\u001b[0m\n\u001b[0;31m    print(\"Estimated coefficients:\\nb_0 = {} \\\u001b[0m\n\u001b[0m                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m~/miniconda3/envs/zebra/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2888\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2889\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2890\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Adj.CLose'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-44-f339818b20b9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Adj.CLose'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'g'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'upper left'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/zebra/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2897\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2898\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2899\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2900\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2901\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/zebra/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2889\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2890\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2891\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2892\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2893\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtolerance\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Adj.CLose'"
      ]
     }
    ],
    "source": [
-    "import numpy as np \n",
-    "import matplotlib.pyplot as plt \n",
-    "\n",
-    "def estimate_coef(x, y): \n",
-    "\t# number of observations/points \n",
-    "\tn = np.size(x) \n",
-    "\n",
-    "\t# mean of x and y vector \n",
-    "\tm_x, m_y = np.mean(x), np.mean(y) \n",
-    "\n",
-    "\t# calculating cross-deviation and deviation about x \n",
-    "\tSS_xy = np.sum(y*x) - n*m_y*m_x \n",
-    "\tSS_xx = np.sum(x*x) - n*m_x*m_x \n",
-    "\n",
-    "\t# calculating regression coefficients \n",
-    "\tb_1 = SS_xy / SS_xx \n",
-    "\tb_0 = m_y - b_1*m_x \n",
-    "\n",
-    "\treturn(b_0, b_1) \n",
-    "\n",
-    "def plot_regression_line(x, y, b): \n",
-    "\t# plotting the actual points as scatter plot \n",
-    "\tplt.scatter(x, y, color = \"m\", \n",
-    "\t\t\tmarker = \"o\", s = 30) \n",
-    "\n",
-    "\t# predicted response vector \n",
-    "\ty_pred = b[0] + b[1]*x \n",
-    "\n",
-    "\t# plotting the regression line \n",
-    "\tplt.plot(x, y_pred, color = \"g\") \n",
-    "\n",
-    "\t# putting labels \n",
-    "\tplt.xlabel('x') \n",
-    "\tplt.ylabel('y') \n",
-    "\n",
-    "\t# function to show plot \n",
-    "\tplt.show() \n",
-    "\n",
-    "def main(): \n",
-    "\t# observations \n",
-    "\tx = np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]) \n",
-    "\ty = np.array([1, 3, 2, 5, 7, 8, 8, 9, 10, 12]) \n",
-    "\n",
-    "\t# estimating coefficients \n",
-    "\tb = estimate_coef(x, y) \n",
-    "\tprint(\"Estimated coefficients:\\nb_0 = {} \\ \n",
-    "\t\t\\nb_1 = {}\".format(b[0], b[1])) \n",
-    "\n",
-    "\t# plotting regression line \n",
-    "\tplot_regression_line(x, y, b) \n",
-    "\n",
-    "if __name__ == \"__main__\": \n",
-    "\tmain() \n"
+    "df['Adj.CLose'].plot(figsize=(15,6),color='g')\n",
+    "plt.legend(loc='upper left')\n",
+    "plt.show()"
    ]
   },
   {
