--- a/Python/Dictionary/Collection_Types_ALL.ipynb
+++ b/Python/Dictionary/Collection_Types_ALL.ipynb
@@ -707,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7f11c05164e0>\n"
+      "<list_reverseiterator object at 0x7ff53d524128>\n"
      ]
     }
    ],
@@ -776,7 +776,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7f11c05a2978>\n"
+      "<list_reverseiterator object at 0x7ff53d562f28>\n"
      ]
     }
    ],
@@ -1414,7 +1414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cat', 'canary', 'goldfish', 'dog'}\n"
+      "{'cat', 'goldfish', 'dog', 'canary'}\n"
      ]
     }
    ],
@@ -1498,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -1534,7 +1534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'cat', 'canary', 'goldfish', 'dog'}\n"
+      "{'cat', 'goldfish', 'dog', 'canary'}\n"
      ]
     }
    ],
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1710,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -1728,7 +1728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1774,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1783,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1832,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1859,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -1876,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1908,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1925,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,6 +1944,31 @@
     "# same as no actally these are the hash map which you studied about in intro to algo class so thats all and that concludes the recap for all\n",
     "# done till now BY!! see you tommorow"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello=\"hello\"\n",
+    "print(hello)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
