--- a/Python/Dictionary/Collection_Types_ALL.ipynb
+++ b/Python/Dictionary/Collection_Types_ALL.ipynb
@@ -707,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7f49ad2384e0>\n"
+      "<list_reverseiterator object at 0x7f45bc733630>\n"
      ]
     }
    ],
@@ -776,7 +776,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<list_reverseiterator object at 0x7f49ad2a55c0>\n"
+      "<list_reverseiterator object at 0x7f45bc68df98>\n"
      ]
     }
    ],
@@ -1414,7 +1414,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dog', 'goldfish', 'canary', 'cat'}\n"
+      "{'cat', 'dog', 'canary', 'goldfish'}\n"
      ]
     }
    ],
@@ -1534,7 +1534,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dog', 'goldfish', 'canary', 'cat'}\n"
+      "{'cat', 'dog', 'canary', 'goldfish'}\n"
      ]
     }
    ],
@@ -1947,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1986,7 +1986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2012,7 +2012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2072,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -2103,7 +2103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2112,7 +2112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2139,7 +2139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2186,7 +2186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -2229,7 +2229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2238,7 +2238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -2255,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2280,7 +2280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2307,7 +2307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -2358,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2370,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2380,7 +2380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2389,7 +2389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
@@ -2442,7 +2442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2454,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -2473,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2482,7 +2482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2522,7 +2522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2532,7 +2532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2541,7 +2541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -2565,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2575,7 +2575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -2593,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2602,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2628,7 +2628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -2645,7 +2645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2654,7 +2654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2680,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -2697,7 +2697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2712,7 +2712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2738,7 +2738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -2758,9 +2758,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "v=list(dictionary.)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
