--- a/Python/Dictionary/Collection_Types_ALL.ipynb
+++ b/Python/Dictionary/Collection_Types_ALL.ipynb
@@ -2755,10 +2755,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# NOW THIS IS IMPORTANT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=list(dictionary.items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k=list(dictionary.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v=list(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 1), (2, 2), (3, 3), (4, 4), (5, 5)] \n",
+      " [1, 2, 3, 4, 5] \n",
+      " [1, 2, 3, 4, 5] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(t,\"\\n\",k,\"\\n\",v,\"\\n\")"
+   ]
   },
   {
    "cell_type": "code",
